--- a/src/main/webapp/js/app/tipousuario/remove.html
+++ b/src/main/webapp/js/app/tipousuario/remove.html
@@ -1,9 +1,14 @@
 <header-component></header-component>
 <main role="main" class="container" style="margin-bottom: 100px;">
-
-    <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
     <div class="primeraParte"></div>
-    <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
+    <div class="row">
+        <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2"><i class="fas fa-user-cog"></i> Tipos de usuario</h1>
+                <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
+            </div>     
+        </div>
+    </div>
     <div ng-show="tabla">
         <table class="table table-striped table-hover table-bordered">        
             <caption>Tipo Usuario remove</caption>
@@ -24,7 +29,7 @@
     </div>
 
     <div class="alert alert-success" style="margin-top: 20px;" ng-show="mensaje">
-        El registro se ha eliminado
+        El registro se ha eliminado correctamente.
     </div>
 
     <div class="alert alert-danger" style="margin-top: 20px;" ng-show="mensaje2">
