--- a/src/main/webapp/js/app/factura/edit.html
+++ b/src/main/webapp/js/app/factura/edit.html
@@ -1,9 +1,14 @@
 <header-component></header-component>
 <main role="main" class="container" style="margin-bottom: 100px;">
-
-    <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
     <div class="primeraParte"></div>
-    <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a>    
+    <div class="row">
+        <div class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2"><i class="fas fa-file-invoice"></i> Tipos de Factura</h1>
+                <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
+            </div>     
+        </div>
+    </div>   
     <form name="userForm" style="margin-bottom: 50px;" ng-show="!mensaje">
         <h3 style="text-align: center">Editar Factura</h3>
 
