--- a/src/main/webapp/js/app/linea/plist.html
+++ b/src/main/webapp/js/app/linea/plist.html
@@ -1,5 +1,5 @@
 <header-component></header-component>
-<div class="container">
+<div class="container" style="margin-bottom: 100px;">
     <div class="row">
         <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
@@ -15,7 +15,7 @@
         </main>
     </div>
     <div class="row">
-        <div class="col-10">
+        <div class="col-9">
             <nav aria-label="paginacion">
                 <ul class="pagination">
                     <li class="page-item">
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-2">
+        <div class="col-3">
             <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
                 <i class="fa fa-broom"> Limpiar</i>
             </button>
@@ -47,8 +47,6 @@
             </a>
         </div>
     </div>
-
-
     <div class="table-responsive">
         <table class="table table-striped table-sm">
             <tr class="table-success">
@@ -101,15 +99,15 @@
 <!--                <td>
                     <a href="tipousuario/view/{{fila.obj_tipoUsuario.id}}">{{fila.obj_tipoUsuario.desc}}</a>
                 </td>-->
-                <td> 
+                <td class="acciones"> 
                     <a  href="{{ob}}/view/{{fila.id}}"> 
-                        <button style="font-size:15px" class="btn btn-info"><i class="fa fa-eye"></i></button>
+                        <button class="btn btn-info accion"  id="ver"><i class="fa fa-eye"></i></button>
                     </a> 
                     <a  href="{{ob}}/edit/{{fila.id}}"> 
-                        <button style="font-size:15px" class="btn btn-success"><i class="fa fa-edit"></i></button>
+                        <button class="btn btn-success accion"  id="editar"><i class="fa fa-edit"></i></button>
                     </a> 
                     <a  href="{{ob}}/remove/{{fila.id}}"> 
-                        <button style="font-size:15px" class="btn btn-danger"><i class="fa fa-trash-alt"></i></button>
+                        <button class="btn btn-danger accion"  id="borrar"><i class="fa fa-trash-alt"></i></button>
                     </a> 
                 </td>                                  
             </tr>
