--- a/src/main/webapp/js/app/producto/plist.html
+++ b/src/main/webapp/js/app/producto/plist.html
@@ -1,5 +1,5 @@
 <header-component></header-component>
-<div>
+<div class="container" style="margin-bottom: 100px;">
     <div class="row">
         <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
@@ -15,7 +15,7 @@
         </main>
     </div>
     <div class="row">
-        <div class="col-10">
+        <div class="col-9">
             <nav aria-label="paginacion">
                 <ul class="pagination">
                     <li class="page-item">
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-2">
+        <div class="col-3">
             <a  href="{{ob}}/create/"> 
                 <button type="button" class="btn btn-info btn-sm" style="width: 100px; height:30px;">
                     <i class="fas fa-box"> Crear</i>
