--- a/src/main/webapp/js/app/usuario/plist.html
+++ b/src/main/webapp/js/app/usuario/plist.html
@@ -1,5 +1,5 @@
 <header-component></header-component>
-<div>
+<div class="container" style="margin-bottom: 100px;">
     <div class="row">
         <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
@@ -15,7 +15,7 @@
         </main>
     </div>
     <div class="row">
-        <div class="col-10">
+        <div class="col-9">
             <nav aria-label="paginacion">
                 <ul class="pagination">
                     <li class="page-item">
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
         </div>
-        <div class="col-2">
+        <div class="col-3">
             <a  href="{{ob}}/create/"> 
                 <button type="button" class="btn btn-info btn-sm" style="width: 100px; height:30px;">
                     <i class="fas fa-user-plus"> Crear</i>
@@ -45,106 +45,105 @@
             <button type="button" class="btn btn-danger btn-sm" style="width: auto; height:30px;" ng-click="resetOrder()">
                 <i class="fas fa-toilet-paper"> Reset</i>
             </button>
-            
+
         </div>
     </div>
+        <div class="table-responsive">
+            <table class="table table-striped table-sm">
+                <tr class="table-success">
+                    <th>
+                        ID
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id', 'asc')">
+                            <i class="fas fa-long-arrow-alt-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id', 'desc')">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                        </button>
+                    </th>
+                    <th>
+                        DNI
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('dni', 'asc')">
+                            <i class="fas fa-long-arrow-alt-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('dni', 'desc')">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                        </button>
+                    </th>
+                    <th>
+                        Nombre
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('nombre', 'asc')">
+                            <a class="fas fa-long-arrow-alt-up" ></a>
 
-
-    <div class="table-responsive">
-        <table class="table table-striped table-sm">
-            <tr class="table-success">
-                <th>
-                    ID
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id', 'asc')">
-                        <i class="fas fa-long-arrow-alt-up"></i>
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
-                </th>
-                <th>
-                    DNI
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('dni', 'asc')">
-                        <i class="fas fa-long-arrow-alt-up"></i>
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('dni', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
-                </th>
-                <th>
-                    Nombre
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('nombre', 'asc')">
-                        <a class="fas fa-long-arrow-alt-up" ></a>
-
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('nombre', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
-                </th>
-                <th>
-                    Primer apellido
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape1', 'asc')">
-                        <i class="fas fa-long-arrow-alt-up"></i>
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape1', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
-                </th>
-                <th>
-                    Segundo apellido
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape2', 'asc')">
-                        <i class="fas fa-long-arrow-alt-up"></i>
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape2', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
-                </th>
-                <th>
-                    Nombre usuario
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('login', 'asc')">
-                        <i class="fas fa-long-arrow-alt-up"></i>
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('login', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
-                </th>
-                <th>
-                    Tipo de usuario
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_tipoUsuario', 'asc')">
-                        <i class="fas fa-long-arrow-alt-up"></i>
-                    </button>
-                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_tipoUsuario', 'desc')">
-                        <i class="fas fa-long-arrow-alt-down"></i>
-                    </button>
-                </th>
-                <th>
-                    Acciones                
-                </th>
-            </tr>
-            <tr ng-repeat="fila in ajaxDataUsuarios">
-                <td>{{fila.id}}</td>
-                <td>{{fila.dni}}</td>
-                <td>{{fila.nombre}}</td>
-                <td>{{fila.ape1}}</td>
-                <td>{{fila.ape2}}</td>
-                <td>{{fila.login}}</td>                
-                <td>
-                    <a href="tipousuario/view/{{fila.obj_tipoUsuario.id}}">{{fila.obj_tipoUsuario.desc}}</a>
-                </td>
-                <td> 
-                    <a  href="{{ob}}/view/{{fila.id}}"> 
-                        <button style="font-size:15px" class="btn btn-info"><i class="fa fa-eye"></i></button>
-                    </a> 
-                    <a  href="{{ob}}/edit/{{fila.id}}"> 
-                        <button style="font-size:15px" class="btn btn-success"><i class="fa fa-edit"></i></button>
-                    </a> 
-                    <a  href="{{ob}}/remove/{{fila.id}}"> 
-                        <button style="font-size:15px" class="btn btn-danger"><i class="fa fa-trash-alt"></i></button>
-                    </a> 
-                </td>                                  
-            </tr>
-        </table>
-    </div>
+                        </button>
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('nombre', 'desc')">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                        </button>
+                    </th>
+                    <th>
+                        Primer apellido
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape1', 'asc')">
+                            <i class="fas fa-long-arrow-alt-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape1', 'desc')">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                        </button>
+                    </th>
+                    <th>
+                        Segundo apellido
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape2', 'asc')">
+                            <i class="fas fa-long-arrow-alt-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('ape2', 'desc')">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                        </button>
+                    </th>
+                    <th>
+                        Nombre usuario
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('login', 'asc')">
+                            <i class="fas fa-long-arrow-alt-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('login', 'desc')">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                        </button>
+                    </th>
+                    <th>
+                        Tipo de usuario
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_tipoUsuario', 'asc')">
+                            <i class="fas fa-long-arrow-alt-up"></i>
+                        </button>
+                        <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_tipoUsuario', 'desc')">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                        </button>
+                    </th>
+                    <th>
+                        Acciones                
+                    </th>
+                </tr>
+                <tr ng-repeat="fila in ajaxDataUsuarios">
+                    <td>{{fila.id}}</td>
+                    <td>{{fila.dni}}</td>
+                    <td>{{fila.nombre}}</td>
+                    <td>{{fila.ape1}}</td>
+                    <td>{{fila.ape2}}</td>
+                    <td>{{fila.login}}</td>                
+                    <td>
+                        <a href="tipousuario/view/{{fila.obj_tipoUsuario.id}}">{{fila.obj_tipoUsuario.desc}}</a>
+                    </td>
+                    <td class="acciones"> 
+                        <a  href="{{ob}}/view/{{fila.id}}"> 
+                            <button class="btn btn-info accion"  id="ver"><i class="fa fa-eye"></i></button>
+                        </a> 
+                        <a  href="{{ob}}/edit/{{fila.id}}"> 
+                            <button class="btn btn-success accion" id="editar"><i class="fa fa-edit"></i></button>
+                        </a> 
+                        <a  href="{{ob}}/remove/{{fila.id}}"> 
+                            <button class="btn btn-danger accion" id="borrar"><i class="fa fa-trash-alt"></i></button>
+                        </a> 
+                    </td>                                  
+                </tr>
+            </table>
+        </div>
+    
     <div class="row" style="margin-bottom: 55px;">
         <div class="col-10">
             <nav aria-label="paginacion">
