--- a/src/main/webapp/js/app/usuario/login.html
+++ b/src/main/webapp/js/app/usuario/login.html
@@ -12,14 +12,14 @@
         <div class="form-group row justify-content-md-center">            
             <div class="col-sm-8 col-md-5">
                 <label for="login">Login</label>
-                <input type="text" class="form-control" id="login" placeholder="Introduce tu nombre de usuario" ng-model="login" ng-required="true">
+                <input type="text" class="form-control" id="login" placeholder="Introduce tu nombre de usuario" ng-model="login" ng-required="true" ng-keyup="$event.keyCode === 13 && log()">
                 <small id="emailHelp" class="form-text text-muted">Escribe correctamente tu nombre de usuario.</small>
             </div>
         </div>    
         <div class="form-group row justify-content-md-center">            
             <div class="col-sm-8 col-md-5">
                 <label for="pass">Password</label>
-                <input type="password" class="form-control" id="pass" placeholder="Introduce tu contraseña" ng-model="pass" ng-required="true">
+                <input type="password" class="form-control" id="pass" placeholder="Introduce tu contraseña" ng-model="pass" ng-required="true" ng-keyup="$event.keyCode === 13 && log()">
                 <div ng-show="!userForm.pass.$valid && userForm.pass.$pristine" class="alert alert-danger" role="alert">
                     La contraseña es obligatoria.
                 </div>
