--- a/src/main/webapp/js/app/usuario/plist.html
+++ b/src/main/webapp/js/app/usuario/plist.html
@@ -116,6 +116,9 @@
                         </button>
                     </th>
                     <th>
+                        Facturas
+                    </th>
+                    <th>
                         Acciones                
                     </th>
                 </tr>
@@ -128,6 +131,11 @@
                     <td>{{fila.login}}</td>                
                     <td>
                         <a href="tipousuario/view/{{fila.obj_tipoUsuario.id}}">{{fila.obj_tipoUsuario.desc}}</a>
+                    </td>
+                    <td>
+                        <a href="usuario/plistfactura/{{fila.id}}/10/1" class="btn table-warning" ng-class="{'disabled': fila.numFactura == 0}">
+                            {{fila.numFactura}}
+                        </a>
                     </td>
                     <td class="acciones"> 
                         <a  href="{{ob}}/view/{{fila.id}}"> 
