--- a/src/main/webapp/js/app/factura/plist.html
+++ b/src/main/webapp/js/app/factura/plist.html
@@ -89,7 +89,16 @@
                     <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'desc')">
                         <i class="fas fa-long-arrow-alt-down"></i>
                     </button>
-                </th>               
+                </th> 
+                <th>
+                    LINEAS
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'asc')">
+                        <i class="fas fa-long-arrow-alt-up"></i>
+                    </button>
+                    <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'desc')">
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                    </button>
+                </th> 
                 <th>
                     Acciones                
                 </th>
@@ -99,6 +108,11 @@
                 <td>{{fila.fecha}}</td>
                 <td>{{fila.iva}}</td>
                 <td><a href="usuario/view/{{fila.obj_Usuario.id}}">{{fila.obj_Usuario.nombre}} {{fila.obj_Usuario.ape1}} {{fila.obj_Usuario.ape2}}</a></td>             
+                <td>
+                    <a href="factura/plistlinea/{{fila.id}}/10/1" class="btn table-warning" ng-class="{'disabled': fila.numLinea == 0}">
+                        <i>{{fila.numLinea}}</i>
+                    </a>
+                </td>
                 <td class="acciones"> 
                     <a  href="{{ob}}/view/{{fila.id}}"> 
                         <button class="btn btn-info accion"  id="ver"><i class="fa fa-eye"></i></button>
