--- a/src/main/webapp/js/app/factura/plistlinea.html
+++ b/src/main/webapp/js/app/factura/plistlinea.html
@@ -3,8 +3,8 @@
     <div class="row">
         <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2"><i class="fas fa-file-invoice"></i> Facturas del usuario 
-                    <a href="{{ob}}/view/{{ajaxDatosUsuarios.id}}">{{ajaxDatosUsuarios.nombre}} {{ajaxDatosUsuarios.ape1}}</a></h1>
+                <h1 class="h2"><i class="fas fa-file-invoice"></i> Lineas de la factura
+                    <a href="{{ob}}/view/{{ajaxDatosFactura.id}}">{{ajaxDatosFactura.id}}</a></h1>
                 <div class="btn-group" style="width:400px;">
                     <p class="mt-2" style="width:200px;">Selecciona RPP: </p>
                     <select class="form-control" 
@@ -83,7 +83,7 @@
                     </button>
                 </th>
                 <th>
-                    Tipo Factura
+                    Numero de Factura
                     <button type="button" class="btn btn-light btn-sm" ng-click="ordena('id_usuario', 'asc')">
                         <i class="fas fa-long-arrow-alt-up"></i>
                     </button>
