--- a/src/main/webapp/js/app/usuario/plistfactura.html
+++ b/src/main/webapp/js/app/usuario/plistfactura.html
@@ -68,7 +68,7 @@
                 <td>{{fila.fecha| date:'d-M-y'}}</td>
                 <td>{{fila.iva}}</td>                                                
                 <td>
-                    <a href="factura/plistlinea/{{fila.id}}/10/1" class="btn table-warning" ng-class="{'disabled': fila.link_linea == 0}">
+                    <a href="factura/plistlinea/{{fila.id}}/10/1" class="btn table-warning" ng-class="{'disabled': fila.numLinea == 0}">
                         <i>{{fila.numLinea}}</i>
                     </a>
                 </td>
