--- a/src/main/webapp/js/app/linea/view.html
+++ b/src/main/webapp/js/app/linea/view.html
@@ -1,11 +1,18 @@
 <header-component></header-component>
-<main role="main" class="container">
+<main role="main" class="container" style="margin-bottom: 100px;">
 
     <!--    <h3>Resultado de la llamada AJAX: {{ajaxData}}</h3>-->
     <div class="primeraParte"></div>
-    <a href="javascript:window.history.back();"> <button class="btn btn-success" style="margin-bottom: 10px;"> Volver</button> </a>
+    <div class="row">
+        <div class="col-md-12 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
+            <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                <h1 class="h2"><i class="fas fa-file-invoice"></i> Linea</h1>
+                <h3 style="text-align: center">Ver</h3>
+                <a href="javascript:window.history.back();"> <button class="btn btn-success">Volver</button> </a> 
+            </div>     
+        </div>
+    </div>
     <table class="table table-striped table-hover table-bordered">        
-        <caption>View de Linea</caption>
         <tr>
             <th>ID</th>
             <th>{{ajaxDatoLinea.id}}</th>
