--- a/src/main/webapp/js/app/carrito/plist.html
+++ b/src/main/webapp/js/app/carrito/plist.html
@@ -3,9 +3,9 @@
     <div class="row">
         <main role="main" class="col-md-9 ml-sm-auto col-lg-12 px-4" style="margin-top: 50px">
             <div class="d-flex justify-content-between flex-wrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1><i class="fas fa-shopping-cart"></i> Productos</h1>
-                <span id="precioTotal">Precio total: {{precioProducto}}</span>
-                <span id="cantidadTotal">Cantidad de productos: {{cantidadProducto}}</span>
+                <h1><i class="fas fa-shopping-cart"></i> Carrito</h1>
+                <span id="precioTotal" ng-show="!carritoVacio">Precio total: {{precioProducto}}</span>
+                <span id="cantidadTotal" ng-show="!carritoVacio">Cantidad de productos: {{cantidadProducto}}</span>
             </div>     
         </main>
     </div>
@@ -15,18 +15,22 @@
             <div class="items">
                 <div class="item" ng-repeat="item in ajaxDataCarritoShow track by $index">
                     <div id="itemImagen"><i class="fas fa-cookie-bite" style="font-size: 200px;"><!--aqui iria la foto {{item.obj_Producto.foto}}--></i></div>
-                    <div id="itemDesc">{{item.obj_Producto.desc}}</div>
-                    <div id="itemPrecio">{{item.obj_Producto.precio}}$</div>
-                    <div id="itemCant">cantidad: {{item.cantidad}}</div>
-                    <div id="itemAcciones">
+                    <div id="itemDesc"><h3>{{item.obj_Producto.desc}}</h3></div>
+                    <div id="itemPrecio">Precio: {{item.obj_Producto.precio}}$</div>
+                    <div id="itemCant">Cantidad: {{item.cantidad}}</div>
+                    <div id="itemAdd">
                         <a class="btn btn-success"  ng-click="carrito('add', item.obj_Producto.id, '1')">
-                            <i class="fas fa-plus"></i>
+                            <i class="fas fa-plus"> Agregar</i>
                         </a>
+                    </div>
+                    <div id="itemRed">
                         <a class="btn btn-warning"  ng-click="carrito('reduce', item.obj_Producto.id, '1')">
-                            <i class="fas fa-minus"></i>
+                            <i class="fas fa-minus"> Reducir</i>
                         </a>
+                    </div>
+                    <div id="itemDel">
                         <a class="btn btn-danger"  ng-click="carrito('reduce', item.obj_Producto.id, item.cantidad)">
-                            <i class="fas fa-eraser"></i>
+                            <i class="fas fa-eraser"> Eliminar</i>
                         </a>
                         
                     </div>                
